# craft_hr

./: .update_trigger  README.md  SALARY_INCREMENT_README.md  TRIPOD_LEAVE_FIX.md  pyproject.toml
craft_hr/: hooks.py
craft_hr/craft_hr/doctype/ksa_eos_calculation/: __init__.py  ksa_eos_calculation.js  ksa_eos_calculation.json  ksa_eos_calculation.py
craft_hr/craft_hr/doctype/salary_component_detail/: salary_component_detail.json  salary_component_detail.py
craft_hr/craft_hr/doctype/salary_increment/: salary_increment.js  salary_increment.json  salary_increment.py  test_salary_increment.py
craft_hr/craft_hr/print_format/salary_increment_amendment/: salary_increment_amendment.html  salary_increment_amendment.json
craft_hr/events/: get_leaves.py  leave_allocation.py  leave_application.py  leave_management.py
craft_hr/overrides/: attendance_tool.py
craft_hr/patches/: LEAVE_FIX_README.md  fix_all_leave_allocations.py
craft_hr/public/js/: employee.js
