[project]
name = "craft_hr"
authors = [
    {name = "erptripod-hub", email = "admin@erptripod.com"}
]
description = "Craft HR - UAE Labour Law"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = []

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "craft_hr"
